--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "bcrypt": "^1.0.3",
     "body-parser": "~1.17.1",
     "bootbox": "^4.4.0",
+    "bootstrap-datepicker": "^1.7.1",
+    "bootstrap-select": "^1.12.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.2.1",
+    "grunt-cli": "^1.2.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
     "less-middleware": "~2.2.0",
     "method-override": "^2.3.10",
+    "moment": "^2.19.1",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
     "pug": "~2.0.0-beta11",
