--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "uniqid": "^4.1.1"
   }
 }
