--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-select": "^1.12.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "csvjson": "^4.3.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.6",
