--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.15.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.2.1",
+    "formidable": "^1.1.1",
     "grunt-cli": "^1.2.0",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
